Fixed layout issues

--- a/src/assets/scss/components/_about.scss
+++ b/src/assets/scss/components/_about.scss
@@ -126,7 +126,7 @@
 /*----------  about page text  ----------*/
 
 .about-page-text {
-  font-size: 15px;
+  font-size: 18px;
   line-height: 26px;
 
   letter-spacing: 0.5px;
